--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -11,6 +11,13 @@ python = "^3.8"
 pytest = "^5.2"
 flake8 = "^4.0.1"
 autoflake = "^1.4"
+isort = "^5.10.1"
+
+[tool.isort]
+multi_line_output = 3
+include_trailing_comma = false
+force_grid_wrap = 0
+line_length = 88
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
