chore: Installed black dev-dependency for formatting.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pytest = "^5.2"
 flake8 = "^4.0.1"
 autoflake = "^1.4"
 isort = "^5.10.1"
+black = "^22.1.0"
 
 [tool.isort]
 multi_line_output = 3
