chore: Installed mypy dev-dependency for static type checking.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ flake8 = "^4.0.1"
 autoflake = "^1.4"
 isort = "^5.10.1"
 black = "^22.1.0"
+mypy = "^0.931"
 
 [tool.isort]
 multi_line_output = 3
