--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,23 @@ isort = "^5.10.1"
 black = "^22.1.0"
 mypy = "^0.931"
 
+[tool.black]
+exclude = '''
+/(
+    \.git
+  | \.mypy_cache
+  | \.tox
+  | venv
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
+
 [tool.isort]
+profile = "black" 
 multi_line_output = 3
 include_trailing_comma = false
 force_grid_wrap = 0
