--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 fastapi = "^0.73.0"
 uvicorn = {extras = ["standard"], version = "^0.17.4"}
 pydantic = "^1.9.0"
+email-validator = "^1.1.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
