--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ fastapi = "^0.73.0"
 uvicorn = {extras = ["standard"], version = "^0.17.4"}
 pydantic = "^1.9.0"
 email-validator = "^1.1.3"
+sqlalchemy = "^1.4.31"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
