--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ uvicorn = {extras = ["standard"], version = "^0.17.4"}
 pydantic = "^1.9.0"
 email-validator = "^1.1.3"
 sqlalchemy = "^1.4.31"
+alembic = "^1.7.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
