--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pydantic = "^1.9.0"
 email-validator = "^1.1.3"
 sqlalchemy = "^1.4.31"
 alembic = "^1.7.6"
+astropy = "^5.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
