--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ email-validator = "^1.1.3"
 sqlalchemy = "^1.4.31"
 alembic = "^1.7.6"
 astropy = "^5.0.1"
+psycopg2 = "^2.9.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
