chore: Updated docker-compose.yml configuration.

--- a/local.yml
+++ b/local.yml
@@ -10,6 +10,8 @@ services:
       - 8008:8000
     depends_on:
       - db
+    env_file:
+      - .env
   
   db:
     image: postgres:14-alpine
@@ -18,7 +20,7 @@ services:
     ports:
       - 5432:5432
     env_file:
-      - ./.env
+      - .env
 
 volumes:
     postgres_data:
