--- a/local.yml
+++ b/local.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   api:
     build: .
-    command: uvicorn app.main:app --host 0.0.0.0
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     volumes:
       - .:/app
     ports:
