--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ sqlalchemy = "^1.4.31"
 alembic = "^1.7.6"
 astropy = "^5.0.1"
 psycopg2 = "^2.9.3"
+orjson = "^3.6.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
