--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ alembic = "^1.7.6"
 astropy = "^5.0.1"
 psycopg2 = "^2.9.3"
 orjson = "^3.6.7"
+furl = "^2.1.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
