feat: Added trigram similarity extension to postgres.
feat: Added trigram similarity extension to postgres. Includes changes to the local.yml to ensure automatic installation of any extensions to the db container.

--- a/local.yml
+++ b/local.yml
@@ -72,6 +72,7 @@ services:
     container_name: postgres
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+      - ./scripts/init_pgtrgm_extension.sql:/docker-entrypoint-initdb.d/init_pgtrgm_extension.sql
     ports:
       - 5432:5432
     env_file:
