--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,10 @@ astropy = "^5.0.1"
 psycopg2 = "^2.9.3"
 orjson = "^3.6.7"
 furl = "^2.1.3"
+requests = "^2.27.1"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "^7.1.1"
 flake8 = "^4.0.1"
 autoflake = "^1.4"
 isort = "^5.10.1"
