chore(ci): Updated workflows/ci.yml to build with --build-arg INSTALL_DEV="true"

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,6 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     env:
-      INSTALL_DEV: "true"
       PROJECT_NAME: "Perseus FastAPI"
       FIRST_SUPERUSER_EMAIL: ${{ secrets.FIRST_SUPERUSER_EMAIL }}
       FIRST_SUPERUSER_PASSWORD: ${{ secrets.FIRST_SUPERUSER_PASSWORD }}
@@ -38,7 +37,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      # Setup the environment for "development", with $INSTALL_DEV=true
       - name: Setup Environment File
         run: |
           touch .env
@@ -53,11 +51,13 @@ jobs:
           echo SENTRY_DSN=${SENTRY_DSN} > .env
           echo SERVER_NAME=${SERVER_NAME} > .env
           echo SERVER_HOST=${SERVER_HOST} > .env
-          echo INSTALL_DEV=${INSTALL_DEV} > .env
           cat .env
 
       - name: Docker Compose Build
-        run: docker compose -f local.yml up -d --build
+        run: docker compose -f local.yml build --build-arg INSTALL_DEV="true"
+
+      - name: Docker Compose Up
+        run: docker compose -f local.yml up -d
 
       - name: Docker Compose Bash Exec
         run: docker compose -f local.yml exec api bash
