feat: Added SentryAsgiMiddleware().
feat: Added SentryAsgiMiddleware(). Includes installation of sentry-sdk package.

--- a/.env.config
+++ b/.env.config
@@ -8,6 +8,7 @@ POSTGRES_PORT="5432"
 POSTGRES_DB="postgres"
 
 PROJECT_NAME="Perseus FastAPI"
+PROJECT_ENVIRONMENT
 SENTRY_DSN
 SERVER_NAME
 SERVER_HOST
