--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ psycopg2 = "^2.9.3"
 orjson = "^3.6.7"
 furl = "^2.1.3"
 requests = "^2.27.1"
+sentry-sdk = "^1.5.10"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
