feat: Added aioredis and FastAPICache.init() to app.
feat: Added aioredis and FastAPICache.init() to app. Added 1 year expiry to the cache for bodies:list and bodies:list-paginated. Includes amending @pytest.fixture(scope="module") client generator and @pytest.fixture(scope="session") event_loop generator. Includes updates to the pytest.ini file for asyncio mode.

--- a/local.yml
+++ b/local.yml
@@ -53,6 +53,7 @@ services:
       - db
     links:
       - db:db
+      - redis:redis
     env_file:
       - .env
     labels:
@@ -80,6 +81,16 @@ services:
       - 5432:5432
     env_file:
       - .env
+    networks:
+      - api
+
+  redis:
+    image: redis:alpine
+    container_name: redis
+    command: redis-server --appendonly yes
+    expose:
+      - 6379
+    restart: always
     networks:
       - api
 
