--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ orjson = "^3.6.7"
 furl = "^2.1.3"
 requests = "^2.27.1"
 sentry-sdk = "^1.5.10"
+fastapi-cache2 = {extras = ["redis"], version = "^0.1.8"}
+aioredis = "^2.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
@@ -29,6 +31,8 @@ mypy = "^0.931"
 tenacity = "^8.0.1"
 httpx = "^0.22.0"
 anyio = {extras = ["trio"], version = "^3.6.1"}
+pytest-asyncio = "^0.18.3"
+asgi-lifespan = "^1.0.1"
 
 [tool.black]
 exclude = '''
