--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ furl = "^2.1.3"
 requests = "^2.27.1"
 sentry-sdk = "^1.5.10"
 fastapi-cache2 = {extras = ["redis"], version = "^0.1.8"}
-aioredis = "^2.0.1"
+redis = "^4.0.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
