--- a/local.yml
+++ b/local.yml
@@ -48,11 +48,8 @@ services:
     ports:
       - 8001:5000
     volumes: 
-      - .:/app
-    depends_on:
-      - db
+      - ./:/usr/src/app
     links:
-      - db:db
       - redis:redis
     env_file:
       - .env
@@ -71,19 +68,6 @@ services:
       - web
       - api
 
-  db:
-    image: postgres:14-alpine
-    container_name: postgres
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
-      - ./scripts/init_pgtrgm_extension.sql:/docker-entrypoint-initdb.d/init_pgtrgm_extension.sql
-    ports:
-      - 5432:5432
-    env_file:
-      - .env
-    networks:
-      - api
-
   redis:
     image: redis:alpine
     container_name: redis
@@ -93,9 +77,6 @@ services:
     restart: always
     networks:
       - api
-
-volumes:
-    postgres_data:
 
 networks:
   web:
