chore: "python.sortImports.args" warning => "This setting will be removed soon. Use `isort.args` instead."
chore: "python.sortImports.args" warning => "This setting will be removed soon. Use `isort.args` instead."

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,7 @@
   "python.linting.flake8Args": [
     "--max-line-length=88"
   ],
-  "python.sortImports.args": [
+  "isort.args": [
     "--profile",
     "black"
   ],
