--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,9 @@ authors = ["Michael Roberts <michael@observerly.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = "0.87.0"
+fastapi = "0.89.1"
 uvicorn = {extras = ["standard"], version = "^0.18.2"}
-pydantic = "^1.10.2"
+pydantic = "1.10.4"
 email-validator = "^1.1.3"
 sqlalchemy = "^1.4.44"
 alembic = "^1.8.1"
