refactor: Amended database usage to mysql => ^v8.0.*.
refactor: Amended database usage to mysql => ^v8.0.*. Includes removing usage of sqlitedb in CI/CD docker compose configuration. Includes new alembic base migrations. Includes adding references to MYSQL_ environment variables.

--- a/.env.config
+++ b/.env.config
@@ -1,6 +1,13 @@
 FIRST_SUPERUSER_EMAIL
 FIRST_SUPERUSER_PASSWORD
 
+MYSQL_USER="mysql"
+MYSQL_PASSWORD="mysql"
+MYSQL_ROOT_PASSWORD="mysql"
+MYSQL_HOST="db"
+MYSQL_PORT="3306"
+MYSQL_DATABASE="mysql"
+
 PROJECT_NAME="Perseus FastAPI"
 PROJECT_ENVIRONMENT
 SENTRY_DSN
