--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,13 +13,14 @@ email-validator = "^1.1.3"
 sqlalchemy = "^1.4.44"
 alembic = "^1.8.1"
 astropy = "^5.1.1"
-psycopg2 = "^2.9.3"
 orjson = "^3.6.7"
 furl = "^2.1.3"
 requests = "^2.27.1"
 sentry-sdk = "^1.5.10"
 fastapi-cache2 = {extras = ["redis"], version = "^0.1.8"}
 redis = "^4.0.2"
+pymysql = "^1.0.2"
+cryptography = "^39.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
