--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ version: '3.8'
 services:
   api:
     build: .
-    command: uvicorn app.main:app --host 0.0.0.0 --port 5000 --reload --workers 1
+    command:
+      - "/usr/src/app/start.sh"
     image: observerly/perseus:latest
     container_name: observerly_perseus
     restart: always
@@ -11,12 +12,32 @@ services:
       - 8001:5000
     volumes: 
       - ./:/usr/src/app
+    depends_on:
+      - db
+      - redis
     links:
       - redis:redis
     env_file:
       - .env
     networks:
       - api
+
+  db: 
+    image: mysql
+    container_name: mysql
+    restart: always
+    ports:
+      - 3306:3306
+    volumes:
+      - db:/var/lib/mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_HOST: ${MYSQL_HOST}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+    networks:
+      - web
 
   redis:
     image: redis:alpine
@@ -28,7 +49,13 @@ services:
     networks:
       - api
 
+volumes:
+  db:
+    driver: local
+
 networks:
+  web:
+    name: web
   api:
     name: api
     driver: bridge
