feat: Added pymysql.connections.Connection to engine creation if settings.USE_CLOUD_SQL.
feat: Added pymysql.connections.Connection to engine creation if settings.USE_CLOUD_SQL. Includes additional updates to the core/config.py to allow Cloud MySQL connections when settings.USE_CLOUD_SQL is truthy. Includes changes to alembic/env.py to run migrations in online mode.

--- a/.env.config
+++ b/.env.config
@@ -1,17 +1,27 @@
 FIRST_SUPERUSER_EMAIL
 FIRST_SUPERUSER_PASSWORD
 
-MYSQL_USER="mysql"
+USE_CLOUD_SQL = "false"
+
+MYSQL_INSTANCE_CONNECTION_NAME="$PROJECT_NAME:$REGION_NAME:$INSTANCE_NAME"
+MYSQL_USER="perseus"
 MYSQL_PASSWORD="mysql"
 MYSQL_ROOT_PASSWORD="mysql"
 MYSQL_HOST="db"
 MYSQL_PORT="3306"
-MYSQL_DATABASE="mysql"
+MYSQL_DATABASE="perseus"
+MYSQL_PRIVATE_IP="false"
+
+GOOGLE_APPLICATION_CREDENTIALS=".config/gcloud/credentials.json"
+
+REDIS_DSN="redis://redis"
 
 PROJECT_NAME="Perseus FastAPI"
-PROJECT_ENVIRONMENT
-SENTRY_DSN
-SERVER_NAME
-SERVER_HOST
+PROJECT_ENVIRONMENT="development"
+SENTRY_DSN="*"
+SERVER_NAME="*"
+SERVER_HOST="https://perseus.observerly.com"
 
-HTTPS_REDIRECT = "true"
+HTTPS_REDIRECT="true"
+
+INSTALL_DEV="false"
