--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
       PROJECT_NAME: "Perseus FastAPI"
       FIRST_SUPERUSER_EMAIL: ${{ secrets.FIRST_SUPERUSER_EMAIL }}
       FIRST_SUPERUSER_PASSWORD: ${{ secrets.FIRST_SUPERUSER_PASSWORD }}
+      MYSQL_INSTANCE_CONNECTION_NAME: ${{ secrets.MYSQL_INSTANCE_CONNECTION_NAME }}
       MYSQL_USER: ${{ secrets.MYSQL_USER }}
       MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
       MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
@@ -44,6 +45,7 @@ jobs:
           echo PROJECT_NAME=${PROJECT_NAME} >> .env
           echo FIRST_SUPERUSER_EMAIL=${FIRST_SUPERUSER_EMAIL} >> .env
           echo FIRST_SUPERUSER_PASSWORD=${FIRST_SUPERUSER_PASSWORD} >> .env
+          echo MYSQL_INSTANCE_CONNECTION_NAME=${MYSQL_INSTANCE_CONNECTION_NAME} >> .env
           echo MYSQL_USER=${MYSQL_USER} >> .env
           echo MYSQL_PASSWORD=${MYSQL_PASSWORD} >> .env
           echo MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD} >> .env
