--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Michael Roberts <michael@observerly.com>"]
 python = "^3.11"
 fastapi = "0.95.0"
 uvicorn = {extras = ["standard"], version = "^0.18.2"}
+hypercorn = "^0.14.3"
 pydantic = "1.10.6"
 email-validator = "^1.1.3"
 sqlalchemy = "^1.4.44"
