--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - main
     paths-ignore:
-      - '__pycache__'
-      - '.pytest_cache'
+      - "__pycache__"
+      - ".pytest_cache"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -16,7 +16,7 @@ jobs:
     name: CI/CD Build & Test w/pytest
     strategy:
       matrix:
-        os: [ ubuntu-latest ]
+        os: [ubuntu-latest]
 
     runs-on: ${{ matrix.os }}
 
